# conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md
plug/: patterns.c  patterns.h  plug.c  plug.h
src/: main.c
